--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Hi 你好呀</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="个人主页,homepage"/>
-    <meta name="keywords" content="个人主页,homepage"/>
+    <meta name="description" content="你好呀，这里是方十八。F18.RUN/>
+    <meta name="keywords" content="方十八,f18"/>
     <meta name="author" content="kisstime.top"/>
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
@@ -62,9 +62,9 @@
                             </div>
                             <!--左侧信息区域-->
                             <div class="col-xl-4 order-first">
-                                <div class="start_intro"><span class="RedTextColor">Hi，我是银河漫游</span>
-                                    <div class="glitch" data-text="KK">KK</div>
-                                    <h4><i class="fa fa-connectdevelop"></i>WEB开发工程师</h4>
+                                <div class="start_intro"><span class="RedTextColor">Hi，我是小方同学</span>
+                                    <div class="glitch" data-text="方十八">方十八</div>
+                                    <h4><i class="fa fa-connectdevelop"></i>摸鱼大师</h4>
                                     <p>仰望的星空，绘制的像素，翻阅的文字<br>或许都是我们在这趟孤独的时间旅行中，发现的「银河」。</p>
                                     <div class="start_btn">
                                         <a href="https://kisstime.top/archives/124/" title=""
@@ -152,7 +152,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-5">
-                                <p>Copyright <a href="https://kisstime.top/">银河漫游KK</a> 2021 ©.</p>
+                                <p>Copyright <a href="https://f18.run/">方十八 F18.RUN </a> 2022 ©.</p>
                             </div>
                         </div>
                     </div>
