--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="你好呀，这里是方十八。F18.RUN/>
     <meta name="keywords" content="方十八,f18"/>
-    <meta name="author" content="kisstime.top"/>
+    <meta name="author" content="f18.run"/>
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
@@ -57,7 +57,7 @@
                                     <div class="element_circle_gray">
                                         <img src="images/element_gray_circle.png" alt=""/>
                                     </div>
-                                    <img src="images/resource/me.jpg" alt=""/>
+                                    <img src="images/me.jpg" alt=""/>
                                 </div>
                             </div>
                             <!--左侧信息区域-->
@@ -67,11 +67,11 @@
                                     <h4><i class="fa fa-connectdevelop"></i>摸鱼大师</h4>
                                     <p>仰望的星空，绘制的像素，翻阅的文字<br>或许都是我们在这趟孤独的时间旅行中，发现的「银河」。</p>
                                     <div class="start_btn">
-                                        <a href="https://kisstime.top/archives/124/" title=""
+                                        <a href="https://f18.run" title=""
                                            class="theme_btn RedBgShadow mr-4">
                                             <i class="fa fa-smile-o"></i>了解更多
                                         </a>
-                                        <a href="https://kisstime.top/archives/119/" title="" class="theme_btn blank">
+                                        <a href="https://f18.run" title="" class="theme_btn blank">
                                             <i class="fa PurpleTextColor fa-hand-o-right"></i>工作联系
                                         </a>
                                     </div>
