--- a/index.html
+++ b/index.html
@@ -172,5 +172,33 @@
 <script src="js/enllax.js"></script>
 <script src="js/jquery.scroller.js"></script>
 <script src="js/jQuery_nav.js"></script>
+ <style>
+    @font-face {
+        font-family: 'Joe Font';
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+        src: url('https://cdn.f18.run/font/cesytw2.woff2');
+        src: url('https://cdn.f18.run/font/cesytw2.woff2') format('woff2');
+            }
+
+    body {
+        font-family: 'Joe Font';
+            }
+
+    body::before {
+        background: #f5f5f5;
+        background-position: center 0;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    body::before {
+            background-image: linear-gradient(90deg, rgba(60, 10, 30, .04) 3%, transparent 0), linear-gradient(1turn, rgba(60, 10, 30, .04) 3%, transparent 0);
+            background-size: 20px 20px;
+            background-position: 50%;
+            background-repeat: repeat;
+}</style>
+                              
 </body>
 </html>
